--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "lava-sdk": "github:lavanet/lava-sdk#main",
+    "lava-sdk": "github:lavanet/lava-sdk#feature/integrate_state_handling",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
