--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "lava-sdk": "github:lavanet/lava-sdk#d09e258042a5cf8cc0c224f548bba3be4f33415c",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "4.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
