--- a/.env
+++ b/.env
@@ -1,11 +1,14 @@
 # OPTIONAL, endpoint for lava network rpc node
-REACT_APP_LAVA_ENDPOINT=
+REACT_APP_ETHER_ENDPOINT="https://mainnet.infura.io/v3/bbe39236899141f5b3e33ba705de4670"
+
+# OPTIONAL, endpoint for lava network rpc node
+REACT_APP_LAVA_ENDPOINT="pairingList.json"
 
 # The chain_id for dest chain
-REACT_APP_CHAIN_ID=
+REACT_APP_CHAIN_ID=ETH1
 
 # OPTIONAL, rpc interface from provider
-REACT_APP_RPC_INTERFACE=
+REACT_APP_RPC_INTERFACE=jsonrpc
 
 # The private key from staked client acc
 REACT_APP_PRIVATE_KEY=
