--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "ethers": "^6.0.8",
-    "lava-sdk": "github:lavanet/lava-sdk#3bfbdadf90ba30343fcd3c11c06e84d7b2b53e26",
+    "lava-sdk-providers": "github:lavanet/lava-sdk-providers#5424a3aef7bea081bbb58780374d04e643d735ff",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
