Update package json

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "ethers": "^6.0.8",
-    "lava-sdk": "github:lavanet/lava-sdk#bd464803d0f230309a3cdef4844db39347d2c23e",
-    "lava-sdk-providers": "github:lavanet/lava-sdk-providers#5424a3aef7bea081bbb58780374d04e643d735ff",
+    "lava-sdk": "github:lavanet/lava-sdk#main",
+    "lava-sdk-providers": "github:lavanet/lava-sdk-providers#f131fe449c93b80febaa4c56f9249ba8bae7a4ad",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
