--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@lavanet/lava-sdk": "^0.8.2",
     "@mui/material": "^5.10.15",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -13,9 +14,6 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "ethers": "^6.0.8",
-    "lava-sdk": "github:lavanet/lava-sdk#main",
-    "lava-sdk-providers": "github:lavanet/lava-sdk-providers#f131fe449c93b80febaa4c56f9249ba8bae7a4ad",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
